# Ecal

./: .gitignore  CMakeLists.txt
exampleConfigs/: ecal-resolution-study-with-trig-prim.py  trig-prim-analyzer.py
include/Ecal/: EcalClusterProducer.h  EcalDigiProducer.h  EcalRecProducer.h  EcalTriggerGeometry.h  EcalVetoProcessor.h  SingleElectronShowerFeatures.h
include/Ecal/Event/: EcalCluster.h  EcalHit.h  EventDef.h  EventLinkDef.h  LinkDef.h
python/: EcalGeometry.py  digi.py  ecalClusters.py
src/: DNNEcalVetoProcessor.cxx  EcalClusterProducer.cxx  EcalTriggerGeometry.cxx  EcalVetoProcessor.cxx
src/Ecal/: EcalRecProducer.cxx  EcalTrigPrimDigiProducer.cxx  EcalTriggerGeometry.cxx  EcalVetoProcessor.cxx  MIPTracking.cxx  SimRecoilProjector.cxx  SingleElectronShowerFeatures.cxx  TrigPrimResolutionAnalyzer.cxx
src/Ecal/Event/: EcalCluster.cxx  EcalHit.cxx
test/: EcalDigiPipelineTest.cxx  ecal_digi_pipeline_test_config.py
